--- a/html/www/index.html
+++ b/html/www/index.html
@@ -60,10 +60,10 @@
                         <a class="page-scroll" href="#contact">Contato</a>
                     </li>
                      <li>
-                        <a class="page-scroll" href="cadastro_usuario.html">Cadastre-se</a>
+                        <a href="/user/registration">Cadastre-se</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="login.html"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
+                        <a class="page-scroll" href="/login"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
                     </li>
                 </ul>
             </div>
@@ -127,7 +127,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Nosso Treinamento</h2>
                     <h3 class="section-subheading text-muted">Assista abaixo uma introdução de como funciona nosso treinamento. <a href="#">Comece agora</a></h3>
-                    <iframe src="http://www.youtube.com/embed/iuhpL-DyXaQ?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="640" height="360"></iframe>
+                    <iframe src="https://www.youtube.com/embed/iuhpL-DyXaQ?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="640" height="360"></iframe>
                 </div>
             </div>
         </div>
