--- a/html/www/index.html
+++ b/html/www/index.html
@@ -63,7 +63,7 @@
                         <a href="/user/registration">Cadastre-se</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/login"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
+                        <a href="/login"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
                     </li>
                 </ul>
             </div>
