Ajustes site institucional e lista de produtos

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -99,7 +99,7 @@
                         <i class="fa fa-leanpub fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Treinamento</h4>
-                    <p class="text-muted">Oferecemos todo o treinamento para que você, desde já, comece a vender nos EUA. <a class="download" href="#">Clique aqui</a> e saiba como.</p>
+                    <p class="text-muted">Oferecemos todo o treinamento para que você, desde já, comece a vender nos EUA. <a class="download" target="_blank" href="http://vendedorinternacional.online/">Clique aqui</a> e saiba como.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -107,7 +107,7 @@
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Serviço de Redirecionamento</h4>
-                    <p class="text-muted">Você que pretende vender nos EUA precisa de um serviço para que seu produto seja entregue lá com segurança. <a class="download" href="#">Clique aqui</a> e saiba como funciona.</p>
+                    <p class="text-muted">Você que pretende vender nos EUA precisa de um serviço para que seu produto seja entregue lá com segurança. <a class="download" href="#about">Clique aqui</a> e saiba como funciona.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -261,7 +261,7 @@
                                     <h4 class="subheading">Cadastre-se no nosso sistema</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><a class="download" href="/user/registration">Clique Aqui</a> e cadastre no nosso sistema.
+                                    <p class="text-muted"><a class="download" href="/user/registration">Clique Aqui</a> e cadastre-se no nosso sistema.
 É simples e rápido</p>
                                 </div>
                             </div>
@@ -275,11 +275,11 @@
                                     <h4 class="subheading">Insira seus produtos. Quantos precisar.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Após seu cadsatro, compre e nos envie seus produtos para que possamos entregá-los pra você. Basta cadastrar os envios no nosso sistema. Todos os produtos cadastrados comporão seu estoque.</p>
+                                    <p class="text-muted">Após seu cadastro, compre e nos envie seus produtos para que possamos entregá-los pra você. Basta cadastrar os envios no nosso sistema. Todos os produtos cadastrados comporão seu estoque.</p>
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="../static/img/about/4.jpeg" alt="">
                             </div>
@@ -292,7 +292,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Parabéns<br>Produto<br>Entregue</h4>
                             </div>
