Ajustes site institucional

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -9,8 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-
     <title>Vendedor Online Internacional</title>
+    <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
+    <meta name="description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento"/>
+    <meta property="og:title" content="Vendedor internacional"/>
+    <meta property="og:site_name" content="Vendedor internacional"/>
+    <meta property="og:description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento"/>
+    <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -114,8 +119,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Private Label (Em Breve)</h4>
-                    <p class="text-muted">Faça o curso de forma intensiva e personalizada. Tenha seu retorno mais rápido.<a class="download privatebtn" href="javascript:void(0)">Saiba mais</a></p>
+                    <h4 class="service-heading">Private Label</h4>
+                    <p class="text-muted">Crie sua própria marca na Amazon e no Ebay. Faça o curso de forma intensiva e personalizada. Tenha seu retorno mais rápido.<a class="download privatebtn" href="javascript:void(0)">Saiba mais</a>. <a class="download" target="_blank" href="https://pay.hotmart.com/D5790828J?checkoutMode=6">Clique aqui</a> para se inscrever.</p>
                 </div><!--
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -134,7 +139,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Nosso Treinamento</h2>
-                    <h3 class="section-subheading text-muted">Assista abaixo uma introdução de como funciona nosso treinamento. <a href="#">Comece agora</a></h3>
+                    <h3 class="section-subheading text-muted">Assista abaixo uma introdução de como funciona nosso treinamento. <a href="/user/registration">Comece agora</a></h3>
                     <iframe src="https://www.youtube.com/embed/iuhpL-DyXaQ?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="640" height="360"></iframe>
                 </div>
             </div>
@@ -308,9 +313,21 @@
                     </ul>
                 </div>
             </div>
+
         </div>
     </section>
-
+        <!-- About Section -->
+    <section id="tutorial" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Tutorial de uso do sistema</h2>
+                    <h3 class="section-subheading text-muted">Assista abaixo o tutoria de como usar nosso sistema. <a class="download" href="/user/registration">Cadastre-se agora</a></h3>
+                    <iframe src="https://www.youtube.com/embed/iuhpL-DyXaQ?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="640" height="360"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Team Section 
     <section id="team" class="bg-light-gray">
         <div class="container">
@@ -494,8 +511,9 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Private Label</h2>
+                                <p>Veja abaixo um video explicativo de como funciona nosso curso. <a href="https://pay.hotmart.com/D5790828J?checkoutMode=6" target="_blank" class="download">Clique aqui</a> para se cadastrar agora</p>
                                 <div class="text-center">
-                                    <iframe src="https://www.youtube.com/embed/iuhpL-DyXaQ?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="640" height="360"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/wECcdVianRY?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="640" height="360"></iframe>
                                 </div>
                             </div>
                         </div>
