--- a/html/www/index.html
+++ b/html/www/index.html
@@ -37,6 +37,19 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
 
+    <!-- Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-99296614-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
+
 </head>
 
 <body id="page-top" class="index">
@@ -49,7 +62,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo_sup.png" /><img src="../static/img/logo_bottom.png" /></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo_sup.png" /><img src="../static/img/logo_bottom.png" width="175" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -70,6 +83,7 @@
                     <li>
                         <a href="/login"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
                     </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -98,7 +112,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-leanpub fa-stack-1x fa-inverse"></i>
@@ -106,15 +120,23 @@
                     <h4 class="service-heading">Treinamento</h4>
                     <p class="text-muted">Oferecemos todo o treinamento para que você, desde já, comece a vender nos EUA. <a class="download" target="_blank" href="http://vendedorinternacional.online/">Clique aqui</a> e saiba como.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Serviço de Redirecionamento</h4>
+                    <h4 class="service-heading">Redirecionamento EUA</h4>
                     <p class="text-muted">Você que pretende vender nos EUA precisa de um serviço para que seu produto seja entregue lá com segurança. <a class="download" href="#about">Clique aqui</a> e saiba como funciona.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Redirecionamento para Brasil (Em breve)</h4>
+                    <p class="text-muted">Agora você pode comprar nos EUA e receber no Brasil ou em qualquer parte do mundo. Nosso serviço oferece toda a comodidade, segurança e transparência. Para saber maiores informações, <a href="#contact" class="download"> Entre em contato</a>.</p>
+                </div>
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
@@ -250,7 +272,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Serviço de Redirecionamento</h2>
-                    <h3 class="section-subheading text-muted">Utilize nosso serviço de redirecionamento para receber e enviar seus produtos nos EUA.</h3>
+                    <h3 class="section-subheading text-muted">Utilize nosso serviço de redirecionamento para receber e enviar seus produtos nos EUA. Caso tenham alguma duvida, <a href="" class="download">Veja aqui nosso tutorial</a> </h3>
                 </div>
             </div>
             <div class="row">
@@ -323,7 +345,14 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Tutorial de uso do sistema</h2>
                     <h3 class="section-subheading text-muted">Assista abaixo o tutoria de como usar nosso sistema. <a class="download" href="/user/registration">Cadastre-se agora</a></h3>
-                    <iframe src="https://www.youtube.com/embed/iuhpL-DyXaQ?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="640" height="360"></iframe>
+                    <div class="col-md-6">
+                        <h3>Como se cadastrar e cadastrar seus produtos na nossa plataforma</h3>
+                        <iframe src="https://www.youtube.com/embed/_jovASHwz3s?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Veja como funciona o envio (Redirecionamento) na nossa plataforma</h3>
+                        <iframe src="https://www.youtube.com/embed/9Ikxuy0rSYY?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
