--- a/html/www/index.html
+++ b/html/www/index.html
@@ -344,7 +344,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Tutorial de uso do sistema</h2>
-                    <h3 class="section-subheading text-muted">Assista abaixo o tutoria de como usar nosso sistema. <a class="download" href="/user/registration">Cadastre-se agora</a></h3>
+                    <h3 class="section-subheading text-muted">Assista abaixo o tutorial de como usar nosso sistema. <a class="download" href="/user/registration">Cadastre-se agora</a></h3>
                     <div class="col-md-6">
                         <h3>Como se cadastrar e cadastrar seus produtos na nossa plataforma</h3>
                         <iframe src="https://www.youtube.com/embed/_jovASHwz3s?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
