--- a/html/www/index.html
+++ b/html/www/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vendedor Online Internacional</title>
+    <title>Vendedor Online Internacional - Redirecionamento Brasil</title>
     <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
-    <meta name="description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento"/>
+    <meta name="description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
     <meta property="og:title" content="Vendedor internacional"/>
     <meta property="og:site_name" content="Vendedor internacional"/>
-    <meta property="og:description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento"/>
+    <meta property="og:description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
@@ -52,7 +52,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index index-home">
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-leanpub fa-stack-1x fa-inverse"></i>
@@ -120,7 +120,7 @@
                     <h4 class="service-heading">Treinamento</h4>
                     <p class="text-muted">Oferecemos todo o treinamento para que você, desde já, comece a vender nos EUA. <a class="download" target="_blank" href="http://vendedorinternacional.online/">Clique aqui</a> e saiba como.</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
@@ -128,7 +128,25 @@
                     <h4 class="service-heading">Redirecionamento EUA</h4>
                     <p class="text-muted">Você que pretende vender nos EUA precisa de um serviço para que seu produto seja entregue lá com segurança. <a class="download" href="#about">Clique aqui</a> e saiba como funciona.</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Private Label</h4>
+                    <p class="text-muted">Crie sua própria marca na Amazon e no Ebay. Faça o curso de forma intensiva e personalizada. Tenha seu retorno mais rápido.<a class="download privatebtn" href="javascript:void(0)">Saiba mais</a>. <a class="download" target="_blank" href="https://pay.hotmart.com/D5790828J?checkoutMode=6">Clique aqui</a> para se inscrever.</p>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Compra assistida (Em breve)</h4>
+                    <p class="text-muted">Está com dificuldades para comprar nos sites americanos? Não tem problema. Nós compramos para você. Cadastre-se na nossa plataforma, compre lá e faça o redirecionamento por lá mesmo. Temos sempre a solução completa para você. Para maiores informações, <a href="#contact" class="download"> Entre em contato</a>.</p>
+                </div>
+                <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
@@ -136,22 +154,6 @@
                     <h4 class="service-heading">Redirecionamento para Brasil (Em breve)</h4>
                     <p class="text-muted">Agora você pode comprar nos EUA e receber no Brasil ou em qualquer parte do mundo. Nosso serviço oferece toda a comodidade, segurança e transparência. Para saber maiores informações, <a href="#contact" class="download"> Entre em contato</a>.</p>
                 </div>
-                <div class="col-md-3">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Private Label</h4>
-                    <p class="text-muted">Crie sua própria marca na Amazon e no Ebay. Faça o curso de forma intensiva e personalizada. Tenha seu retorno mais rápido.<a class="download privatebtn" href="javascript:void(0)">Saiba mais</a>. <a class="download" target="_blank" href="https://pay.hotmart.com/D5790828J?checkoutMode=6">Clique aqui</a> para se inscrever.</p>
-                </div><!--
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>-->
             </div>
         </div>
     </section>
