Ajustes campo quantidade recebida na tela de stock

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -69,19 +69,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="page-scroll">
-                        <a href="#page-top">Home</a>
+                        <a title="Home" href="#page-top">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Nossos Serviços</a>
+                        <a title="Nossos Serviços" class="page-scroll" href="#services">Nossos Serviços</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contato</a>
+                        <a title="Contato" class="page-scroll" href="#contact">Contato</a>
                     </li>
                      <li>
-                        <a href="/user/registration">Cadastre-se</a>
+                        <a title="Cadastre-se" href="/user/registration">Cadastre-se</a>
                     </li>
                     <li>
-                        <a href="/login"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
+                        <a title="Login" href="/login"><strong><i class="fa fa-sign-in"></i></strong> Login</a>
                     </li>
 
                 </ul>
@@ -97,7 +97,7 @@
             <div class="intro-text">
                 <div class="intro-heading">Seja um vendedor online internacional</div>
                 <div class="intro-lead-in">Fature mais de U$ 300.000 por ano na Amazon e Ebay sem sair de casa</div>
-                <a href="#services" class="page-scroll btn btn-xl">Saiba como</a>
+                <a href="#services" title="Saiba mais sobre vendedor internacional" class="page-scroll btn btn-xl">Saiba como</a>
             </div>
         </div>
     </header>
@@ -282,7 +282,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../static/img/about/1.jpeg" alt="">
+                                <img alt="Cadsatre-se" class="img-circle img-responsive" src="../static/img/about/1.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -290,14 +290,14 @@
                                     <h4 class="subheading">Cadastre-se no nosso sistema</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><a class="download" href="/user/registration">Clique Aqui</a> e cadastre-se no nosso sistema.
+                                    <p class="text-muted"><a title="cadastre-se" class="download" href="/user/registration">Clique Aqui</a> e cadastre-se no nosso sistema.
 É simples e rápido</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../static/img/about/2.jpeg" alt="">
+                                <img alt="Insira seus produtos" class="img-circle img-responsive" src="../static/img/about/2.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -310,7 +310,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../static/img/about/4.jpeg" alt="">
+                                <img class="img-circle img-responsive" src="../static/img/about/4.jpeg" alt="Produto vendido">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading"><br><br>
