Novas telas de envio para o Brasil, Btn arquivar envio, alteracao do tutorial no youtube.

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -353,7 +353,7 @@
                     </div>
                     <div class="col-md-6">
                         <h3>Veja como funciona o envio (Redirecionamento) na nossa plataforma</h3>
-                        <iframe src="https://www.youtube.com/embed/9Ikxuy0rSYY?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
+                        <iframe src="https://www.youtube.com/embed/rluVgSS2hbI?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
                     </div>
                 </div>
             </div>
