Ajustes tutorial plataforma

--- a/html/www/Ajuda.html
+++ b/html/www/Ajuda.html
@@ -80,6 +80,9 @@
                     <li>
                         <a class="page-scroll" href="https://vendedorinternacional.net/#contact">Contato</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://vendedorinternacional.net/ajuda.html">Tutorial</a>
+                    </li>
                      <li>
                         <a href="/user/registration">Cadastre-se</a>
                     </li>
@@ -93,6 +96,26 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
+    <section id="ajuda">
+       <ul class="nav nav-tabs" id="ajudatab">
+            <li><a data-toggle="tab" href="#Tutorial">Tutorial Plataforma</a></li>
+            <!--<li><a data-toggle="tab" href="#FAQ">Perguntas Frequentes</a></li>-->
+        </ul>
+        <div class="tab-content">
+            <div id="Tutorial" class="tab-pane fade in active">
+                <h3>Cadastro na plataforma</h3>
+                <p>Veja abaixo como fazer seu cadastro na plataforma e cadastro dos seus produtos antes de envia-los.</p>
+                <iframe src="https://www.youtube.com/embed/_jovASHwz3s?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="840px" height="475"></iframe>
+                <br><br><br><br>
+                <h3>Envio de produtos</h3>
+                <p>Veja abaixo como enviar os seus produtos.</p>
+                <iframe src="https://www.youtube.com/embed/rluVgSS2hbI?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="840px" height="475"></iframe>
+            </div>
+            <div id="FAQ" class="tab-pane fade">
+            </div>
+        </div>
+    </section>
 
    <!-- Contact Section -->
     <section id="contact">
