--- a/html/www/redidecionamento-brasil/index.html
+++ b/html/www/redidecionamento-brasil/index.html
@@ -80,6 +80,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contato</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://vendedorinternacional.net/ajuda.html">Tutorial</a>
+                    </li>
                      <li>
                         <a href="/user/registration">Cadastre-se</a>
                     </li>
