--- a/html/www/index.html
+++ b/html/www/index.html
@@ -77,6 +77,9 @@
                     <li>
                         <a title="Contato" class="page-scroll" href="#contact">Contato</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://vendedorinternacional.net/ajuda.html">Tutorial</a>
+                    </li>
                      <li>
                         <a title="Cadastre-se" href="/user/registration">Cadastre-se</a>
                     </li>
@@ -340,26 +343,7 @@
 
         </div>
     </section>
-        <!-- About Section -->
-    <section id="tutorial" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Tutorial de uso do sistema</h2>
-                    <h3 class="section-subheading text-muted">Assista abaixo o tutorial de como usar nosso sistema. <a class="download" href="/user/registration">Cadastre-se agora</a></h3>
-                    <div class="col-md-6">
-                        <h3>Como se cadastrar e cadastrar seus produtos na nossa plataforma</h3>
-                        <iframe src="https://www.youtube.com/embed/_jovASHwz3s?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
-                    </div>
-                    <div class="col-md-6">
-                        <h3>Veja como funciona o envio (Redirecionamento) na nossa plataforma</h3>
-                        <iframe src="https://www.youtube.com/embed/rluVgSS2hbI?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Team Section 
+    <!-- Team Section
     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
