validade, troca labels status produto, condição produto e lotes.

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -78,7 +78,7 @@
                         <a title="Contato" class="page-scroll" href="#contact">Contato</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://vendedorinternacional.net/ajuda.html">Tutorial</a>
+                        <a class="page-scroll" href="/ajuda.html">Tutorial</a>
                     </li>
                      <li>
                         <a title="Cadastre-se" href="/user/registration">Cadastre-se</a>
