--- a/html/www/redidecionamento-brasil/index.html
+++ b/html/www/redidecionamento-brasil/index.html
@@ -81,7 +81,7 @@
                         <a class="page-scroll" href="#contact">Contato</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://vendedorinternacional.net/ajuda.html">Tutorial</a>
+                        <a class="page-scroll" href="/ajuda.html">Tutorial</a>
                     </li>
                      <li>
                         <a href="/user/registration">Cadastre-se</a>
