suporte a parceiro, internacionalização, avanços: lote e preço x período

--- a/html/www/maintenance.html
+++ b/html/www/maintenance.html
@@ -12,14 +12,14 @@
     <title>Vendedor Online internacional - Site em manutenção</title>
 
     <!-- Custom fontes -->
-    <link href="../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Estilo -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
 
     <!-- begin olark code -->
     <script type="text/javascript" async>
@@ -34,8 +34,8 @@
 <body class="manutencao-page">
     <div class="content">
 
-        <h1 class="texto"><img src="../static/img/logosite.png" width="140px" /><br><span>SITE EM</span> MANUTENÇÃO</h1>
-        <div class="centro"><p><img src="../static/img/mnt.jpg" height="200px"/> <br /><i class="fa fa-gears"></i> Retornaremos dentro de instantes</p></div>
+        <h1 class="texto"><img src="/static/img/logosite.png" width="140px" /><br><span>SITE EM</span> MANUTENÇÃO</h1>
+        <div class="centro"><p><img src="/static/img/mnt.jpg" height="200px"/> <br /><i class="fa fa-gears"></i> Retornaremos dentro de instantes</p></div>
     </div>
 </body>
 
