adição de conteúdo na página em inglês e mínimos ajustes na de  pt-br.

--- a/html/www/maintenance.html
+++ b/html/www/maintenance.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ LANGUAGE_CODE }}">
+<html lang="pt-br">
 
 <head>
 
@@ -35,7 +35,7 @@
     <div class="content">
 
         <h1 class="texto"><img src="/static/img/logosite.png" width="140px" /><br><span>SITE EM</span> MANUTENÇÃO</h1>
-        <div class="centro"><p><img src="/static/img/mnt.jpg" height="200px"/> <br /><i class="fa fa-gears"></i> Retornaremos dentro de instantes</p></div>
+        <div class="centro"><p><img src="/static/img/mnt.jpg" height="200px"/> <br /><i class="fa fa-gears"></i> Logo logo voltamos!</p></div>
     </div>
 </body>
 
