Ajustes telas da loja e criacao da pagina minhas compras

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -507,7 +507,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="#">Políticas de Privacidade | </a><a href="#">Termos e Condições de Uso</a>
+                            <a href="/termos-e-condicoes-de-uso.html">Termos e Condições de Uso</a>
                         </li>
                     </ul>
                 </div>
