Pop up termos e ajustes layout.

--- a/html/www-en/index.html
+++ b/html/www-en/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div><br><br>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <p class="text-muted">We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation.</p>
                     <ul class="list-qua col-md-5">
                         <li><i class="fa fa-check-square-o"></i> Quality control</li>
@@ -149,8 +149,8 @@
                         <li><i class="fa fa-check-square-o"></i> Adult products preparations</li>
                     </ul>
                 </div>
-                <div class="col-md-4">
-                    <img src="../static/img/box-img.png" />
+                <div class="col-md-5">
+                    <img src="../static/img/img-fbaprepmaster.png" width="100%" />
                 </div>
             </div>
         </div>
