--- a/html/www/termos-e-condicoes-de-uso.html
+++ b/html/www/termos-e-condicoes-de-uso.html
@@ -203,16 +203,23 @@
                         <p>
                             O Vendedor Online Internacional n&atilde;o cobra pelo cadastro e armazenamento dos produtos no seu servidor e no local f&iacute;sico. As cobran&ccedil;as s&atilde;o realizadas a cada envio, por produto e de acordo com o per&iacute;odo de armazenamento do produto com o Vendedor Online Internacional. Segue a tabela de pre&ccedil;os:</p>
                         <p>
-                            <strong>- Produto em estoque conosco at&eacute; 30 dias: USD 1,29 por produto<br />
-                            - Produto em estoque conosco de 31 at&eacute; 45 dias: USD 1,39 por produto<br />
-                            - Produto em estoque conosco de 46 at&eacute; 60 dias: USD 1,99 por produto</strong></p>
+                            <strong>- Produto em estoque conosco at&eacute; 45 dias: USD 1,29 por produto<br />
+                            - Produto em estoque conosco de 46 at&eacute; 75 dias: USD 1,39 por produto<br />
+                            - Produto em estoque conosco de 76 at&eacute; 90 dias: USD 1,99 por produto</strong></p>
                         <p>
                             <br />
-                            A partir do dia 61, o produto ser&aacute; considerado abandonado, retirado do estoque do usu&aacute;rio e o Vendedor Online Internacional colocar&aacute; o produto dispon&iacute;vel para venda visando ressarcimento do per&iacute;odo de armazenamento utilizado.</p>
+                            A partir do dia 91, o produto ser&aacute; considerado abandonado, retirado do estoque do usu&aacute;rio e o Vendedor Online Internacional colocar&aacute; o produto dispon&iacute;vel para venda visando ressarcimento do per&iacute;odo de armazenamento utilizado.</p>
                         <p>
                             &nbsp;</p>
+                        <p><strong>13- Do suporte e bate papo ao vivo</strong></p>
+                        <p>O suporte da plataforma, atarvés do chat na própria plataforma, destina-se única e exclusivamente para exclarecimentos e orientações a respeito de funcionalidades relativas a plataforma. Os canais citados não oferecem suporte a questões relativas a operações em outras plataformas, tais como: Amazon, Ebay ou outra. Não oferecemos suporte a dúvidas como: Gerenciar a sua loja na amazon ou outra plataforma, Venda de produtos, ou qualquer outro tipo de questão relacionada a outra plataforma que não seja do Vendedor Online Internacional.
+</p><p>
+                            &nbsp;</p>
+                        <p><strong>14- Das discrepancias de informação</strong></p>
+                        <p>É de total responsabilidade do usuário da plataforma garantir a habilidade de vender cada produto enviado, verificando quaisquer tipo de restrições e tendo certeza de que o produto esta listado no anuncio correto. Não nos responsabilizamos por informações de produtos cadastrados com informações equivocadas por parte do usuário.</p>
                         <p>
-                            <strong>13- Legisla&ccedil;&atilde;o aplic&aacute;vel e Foro de elei&ccedil;&atilde;o</strong></p>
+                            &nbsp;</p><p>
+                            <strong>15- Legisla&ccedil;&atilde;o aplic&aacute;vel e Foro de elei&ccedil;&atilde;o</strong></p>
                         <p>
                             Todos os itens destes Termos e condi&ccedil;&otilde;es gerais de uso s&atilde;o regidos pelas leis vigentes na Rep&uacute;blica Federativa do Brasil. Para todos os assuntos referentes &agrave; interpreta&ccedil;&atilde;o, ao cumprimento ou qualquer outro questionamento relacionado a estes Termos e condi&ccedil;&otilde;es gerais de uso, as partes concordam em se submeter ao Foro da Cidade do Rio de Janeiro-RJ, com exce&ccedil;&atilde;o de reclama&ccedil;&otilde;es apresentadas por Usu&aacute;rios que se enquadrem no conceito legal de consumidores, que poder&atilde;o submeter tais reclama&ccedil;&otilde;es ao foro de seu domic&iacute;lio.</p>
                         <p>
