Ajuste nos termos

--- a/html/www/termos-e-condicoes-de-uso.html
+++ b/html/www/termos-e-condicoes-de-uso.html
@@ -209,6 +209,9 @@
                         <p>
                             <br />
                             A partir do dia 91, o produto ser&aacute; considerado abandonado, retirado da lista do usu&aacute;rio e o Vendedor Online Internacional colocar&aacute; o produto dispon&iacute;vel para venda visando ressarcimento do per&iacute;odo de armazenamento utilizado.</p>
+                        <p>Os produtos contantes de um determinado envio devem ter seu status como "Em estoque VOI" durante todas as etapas. Desde o cadastro do envio até a sua finalização. Caso um ou mais produtos tenha seu status alterado para "Abandonado", ou seja, tenha ultrapassado o limite de 90 dias em "Estoque VOI" antes de serem enviados para seus destinos, os mesmos serão retirados do envio. </p>
+                        <p>Se for realizado o pagamento de determinado Envio que contenha produto(s) que tiveram status marcado como "Abandonado", é de responsabilidade do usuário a solicitação do estorno do valor pago para o Vendedor Online Internacional, assim como a retificação de envio nos canais de venda.</p>
+
                         <p>
                             &nbsp;</p>
                         <p><strong>13- Do suporte e bate papo ao vivo</strong></p>
