--- a/html/www-en/maintenance.html
+++ b/html/www-en/maintenance.html
@@ -34,7 +34,7 @@
 <body class="manutencao-page">
     <div class="content">
 
-        <h1 class="texto"><img src="/static/img/logosite.png" width="140px" /><br><span>SITE UNDER</span> MAINTENANCE</h1>
+        <h1 class="texto"><img src="/static/img/logo-en.png" /><br><span>SITE UNDER</span> MAINTENANCE</h1>
         <div class="centro"><p><img src="/static/img/mnt.jpg" height="200px"/> <br /><i class="fa fa-gears"></i> Be right back!</p></div>
     </div>
 </body>
