Adicionado area para visualizacao do endereco.

--- a/html/www/ajuda.html
+++ b/html/www/ajuda.html
@@ -118,6 +118,12 @@
                 <h3>Envio de produtos</h3>
                 <p>Veja abaixo como enviar os seus produtos.</p>
                 <iframe src="https://www.youtube.com/embed/rluVgSS2hbI?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="840px" height="475"></iframe>
+                <br><br><br><br>
+                <h3>Endereço VOI</h3>
+                <p>Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay.</p>
+
+                <img src="../static/img/ajuda-endereco-1.png" width="100%" /><br><br>
+                <img src="../static/img/ajuda-endereco-2.png" width="100%" /><br><br>
             </div>
             <div id="FAQ" class="tab-pane fade">
             </div>
