--- a/html/www/ajuda.html
+++ b/html/www/ajuda.html
@@ -166,7 +166,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Enviar</button>
+                                <button type="submit" class="btn btn-xl" id="contactus-form">Enviar</button>
                             </div>
                         </div>
                     </form>
