ajuste no fale conosco da home e página de ajuda.

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -560,6 +560,7 @@
             <a class="btn-azul" href="#"><i class="fa fa-paper-plane"></i> Quero me Cadastrar</a>
         </div>
     </div>-->
+    <div class="loading" style="display: none;">Carregando...</div>
     <!-- jQuery -->
     <script src="../static/externo/jquery/jquery.min.js"></script>
 
