Alteracao logo e nomenclatura para MVUSA

--- a/html/www/ajuda.html
+++ b/html/www/ajuda.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vendedor Online Internacional</title>
+    <title>Maquina de Vendas USA</title>
     <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
-    <meta name="description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
-    <meta property="og:title" content="Vendedor internacional"/>
-    <meta property="og:site_name" content="Vendedor internacional"/>
-    <meta property="og:description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento,  redirecionamento brasil"/>
+    <meta name="description" content="Maquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
+    <meta property="og:title" content="Maquina de Vendas USA"/>
+    <meta property="og:site_name" content="Maquina de Vendas USA"/>
+    <meta property="og:description" content="Maquina de Vendas USA. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento,  redirecionamento brasil"/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
@@ -69,21 +69,12 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo_sup.png" /><img src="../static/img/logo_bottom.png" width="175" /></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo-maquina-vendas.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="page-scroll">
-                        <a href="https://vendedorinternacional.net/">Home</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="https://vendedorinternacional.net/#services">Nossos Serviços</a>
-                    </li><!--
-                    <li>
-                        <a class="page-scroll" href="#redirecionamento">Redirecionamento para Brasil</a>
-                    </li>-->
                     <li>
                         <a class="page-scroll" href="https://vendedorinternacional.net/#contact">Contato</a>
                     </li>
@@ -119,7 +110,7 @@
                 <p>Veja abaixo como enviar os seus produtos.</p>
                 <iframe src="https://www.youtube.com/embed/rluVgSS2hbI?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="840px" height="475"></iframe>
                 <br><br><br><br>
-                <h3>Endereço VOI</h3>
+                <h3>Endereço Maquina de Vendas USA</h3>
                 <p>Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay.</p>
 
                 <img src="../static/img/ajuda-endereco-1.png" width="100%" /><br><br>
@@ -179,7 +170,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Vendedor Online 2017</span>
+                    <span class="copyright">Copyright &copy; Maquina de Vendas USA 2017</span>
                 </div>
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
