--- a/html/www/maintenance.html
+++ b/html/www/maintenance.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vendedor Online internacional - Site em manutenção</title>
+    <title>Maquina de Vendas USA- Site em manutenção</title>
 
     <!-- Custom fontes -->
     <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
 <body class="manutencao-page">
     <div class="content">
 
-        <h1 class="texto"><img src="/static/img/logosite.png" width="140px" /><br><span>SITE EM</span> MANUTENÇÃO</h1>
+        <h1 class="texto"><img src="/static/img/logo-maquina-vendas.png" width="140px" /><br><span>SITE EM</span> MANUTENÇÃO</h1>
         <div class="centro"><p><img src="/static/img/mnt.jpg" height="200px"/> <br /><i class="fa fa-gears"></i> Logo logo voltamos!</p></div>
     </div>
 </body>
